# PrepPanda

./: .gitignore
Project_Report/: PrepPanda_Minor_Project_Report_Part1.md  PrepPanda_Minor_Project_Report_Part2.md  PrepPanda_Minor_Project_Report_Part3.md  Summary_Worksheet.md
Server/: README.md  cache.json  chat.py  docker-compose.yaml  fix_titles.py  fix_titles_2.py  fix_titles_3.py  main.py  pyproject.toml  reset.sql  schema.sql  test.py
Server/Core/: cache.py
Server/Core/Analysis/: __init__.py  analyzer.py  pattern_analyzer.py
Server/Core/Embedder/: __init__.py  classifier.py  constants.py  embedder.py  parser.py
Server/Core/Features/: MindMap.py  NotesGenerator.py
Server/Core/Parser/: NodeParser.py  VisualParser.py  chapter_pipeline.py  embedder.py
Server/Core/SRS/: __init__.py  context_builder.py  generator.py  retriever.py
Server/Core/Storage/: BucketHandler.py  PostgresHandler.py  VectorHandler.py
Server/Routers/: admin.py  analysis.py  catalog.py  deps.py  mindmap.py  notes.py  quiz.py  srs.py
Server/SQL/: schema.sql  truncate.sql
Server/tests/: PYQ_CONSOLIDATED.txt  bio pyqs set.txt  ingest_bio12.ps1  ingest_bio12.sh  inngest.py  preppanda_ingest.json  pyqs_2026.txt  routes.http  test_mindmap.py  test_mindmap_db.py  test_parser.py  test_retrieval.py
evaluation/: dataset.json  dataset_builder.py  dataset_labeled.json  db_inspect.py  debug_query.py  inspect_chapters.py  inspect_eval.ipynb  inspect_results.py  inspect_retrieval.json  labeling.py  main.py  metrics.py  query_chapter.py  results_baseline.json  results_improved.json  (+1 more)
(+33 files in other folders)
