[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.42.87",
    "boto3-stubs~=1.42.87",
    "fastapi>=0.135.3",
    "google-genai>=1.72.0",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.14",
    "sentence-transformers>=3.4.1",
]
